# Man-Huff-Huffman

./: .travis.yml  CMakeLists.txt  LICENSE.txt  README.md
src/: test.cpp
src/coder/: coder.cpp  coder.h  node.h
src/io/: reader.cpp  reader.h  writer.cpp  writer.h
src/reader/: reader.cpp
